<resources>
    <string name="app_name">CFHolding-Venues</string>
    <string name="venues">Venues</string>
    <string name="login_label">CF-Holding Venues\nLogin</string>
    <string name="signUp_label">CF-Holding Venues\nSignup</string>
    <string name="login">Login</string>
    <string name="account_yet"><u>Don\'t have an account yet?</u></string>
    <string name="already_have_an_account"><u>Already have an account</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">Enter your password.</string>
    <string name="hint_email">Enter your email</string>
    <string name="name_validation">Please enter valid name</string>
    <string name="age_validation">Please enter valid age 18 or above</string>
    <string name="email_validation">Please enter valid email address.</string>
    <string name="password_validation">Please enter your password.</string>
    <string name="register_password_validation">Password should be 8 characters long with Alphanumeric and Special Characters</string>
    <string name="no_data">No venues found.</string>
    <string name="retry">Retry</string>
    <string name="splash_label">Welcome to CF-Holding Venues</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="hint_age">Enter your age</string>
    <string name="continue_text">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="location_permission">The Application needs to access location to get appropriate venues data nearby you</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="some_thing_went_wrong">Something went wrong. Please try again.</string>
    <string name="homeFragment">HomeFragment</string>
    <string name="profileFragment">ProfileFragment</string>
    <string name="termsFragment">TermsFragment</string>
    <string name="logout_desc">Do you want to logout?</string>
    <string name="dummy_temp">The standard Lorem Ipsum passage, used since the 1500s\n\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"\n\nSection 1.10.32 of \"de Finibus Bonorum et Malorum\", written by Cicero in 45 BC\n\"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?\"\n\n1914 translation by H. Rackham\n\"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?\"\n\nSection 1.10.33 of \"de Finibus Bonorum et Malorum\", written by Cicero in 45 BC\n\"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.\"\n\n1914 translation by H. Rackham\n\"On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.\"</string>
    <string name="category">Category: %1s</string>
    <string name="profile_name">%1s, %2s</string>
    <string name="profile_age">Age: %1s</string>
    <string name="profile_email">Email: %1s</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="map_key">AIzaSyDBuh1KiQoEa6uKscJXuHgOK-YnXxUXoag</string>
    <string name="need_location_permission">The application need to get the location permission to get the nearby venues.</string>
    <string name="go_to_settings">Go to settings</string>
</resources>