<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:background="@drawable/bg_drawer"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/nav_profile"
            android:background="@drawable/bg_drawer"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/nav_terms"
            android:background="@drawable/bg_drawer"
            android:icon="@drawable/ic_home"
            android:title="@string/terms"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/nav_logout"
            android:background="@drawable/bg_drawer"
            android:icon="@drawable/ic_home"
            android:title="@string/logout"
            app:showAsAction="ifRoom" />
        <!-- Add more items here -->
    </group>


</menu>
